--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ opencv-python~=4.7.0.72
 PyYAML~=6.0
 tqdm~=4.65.0
 --extra-index-url https://download.pytorch.org/whl/cu118
-torchvision~=0.15.1+cu118
-torch~=2.0.0+cu118
+torch~=2.0.0
+torchvision~=0.15.1
